[package]
authors = ["rotemy"]
edition = "2018"
name = "pargit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
console = "0.14.0"
env_logger = "0.8.2"
git2 = "0.13.15"
log = "0.4.11"
structopt = "0.3.21"
