[package]
authors = ["Rotem Yaari"]
description = "Git workflow utility"
edition = "2018"
homepage = "https://github.com/vmalloc/pargit"
keywords = ["git", "workflow"]
license = "MIT OR Apache-2.0"
name = "pargit"
readme = "README.md"
repository = "https://github.com/vmalloc/pargit"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
console = "0.14.0"
dialoguer = "0.8.0"
env_logger = "0.8.2"
git2 = "0.13.15"
log = "0.4.11"
pathdiff = "0.2.0"
semver = "0.11.0"
serde = { version = "1.0.119", features = ["derive"] }
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"
toml = "0.5.8"
toml_edit = "0.2.0"
walkdir = "2.3.1"
