[package]
authors = ["Rotem Yaari"]
description = "Git workflow utility"
edition = "2018"
homepage = "https://github.com/vmalloc/pargit"
keywords = ["git", "workflow"]
license = "MIT"
name = "pargit"
readme = "README.md"
repository = "https://github.com/vmalloc/pargit"
version = "1.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
clap = {version = "4.4", features = ["derive", "env"]}
console = "0.14.0"
dialoguer = "0.8.0"
env_logger = "0.8.2"
git2 = {version = "0.13.15", default-features = false, features = []}
log = "0.4.11"
pathdiff = "0.2.0"
semver = "0.11.0"
serde = {version = "1.0.119", features = ["derive"]}
strum = "0.20.0"
strum_macros = "0.20.1"
toml = "0.5.8"
toml_edit = "0.22.0"
walkdir = "2.3.1"

[dev-dependencies]
itertools = "0.12.1"
